[tool.poetry]
name = "saa-chatbot-frontend-demo-streamlit"
version = "0.1.0"
description = ""
authors = ["Louis Anh Tran <louistrannamanh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.55.0"
streamlit = "^1.40.1"
pypdf2 = "^3.0.1"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
